Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,44 @@ author=Dawn\ Ray'd
 ]{pamphlet}
 
 \begin{document}
-    \section*{\doctitle}
-    \subsection*{\docsubtitle}
+    \section*{Bortom Kaos!}
+    \subsection*{En introduktion till anarkism}
+    \noindent
+    En anarkist är någon som inte vill bli förtryckt och inte vill vara förtryckare. Anarkism är den revolutionära ideen att ingen annan än du har rätt bestämma vad ditt liv ska vara. Vi anarkister tycker att alla ska ha friheten att leva sina liv på vilket sätt de än vill, så länge de inte därmed begränsar någon annans rätt att göra det samma.
+
+    Att anarkism skulle betyda kaos eller oordning är en missuppfattning, ordet i sig kommer från det grekiska \emph{anarkhia}, som betyder:
+    
+    \begin{boldquote}
+    	``utan ledare, ett tillstånd där folk inte styrs av regeringar''
+    \end{boldquote}
+    
+    \noindent
+    Anarkism är beroende av organisation för att fungera; människor arbetar och samarbetar tillsammans, tar själva hand om de saker som påverkar dem, och har direkt kontrol över sina egna liv.
+    
+    Anarkister anser att klimat kaos, fattigdom, och hemlöshet alla är resultat av kapitalism. Vi producerar redan mer mat än vi någonsin äter, det finns mer än nog med resurser för att lösa alla problem vi ser --- det finns fler tomma byggnader i London än det finns hemlösa i hela Storbritannien! Hur skulle det vara om vi kunde utnyttja dessa resurser utan det artificiella problem som är kostnad?\\[2ex]
+\noindent
+    De gränser som för oss verkar så permanenta och orubbliga, ändras i själva verket ständigt, och är skapade av människor --- godtyckliga linjer på en karta fastställda genom maktkamp och av kapitalet. Det finns ingenting naturligt eller beständigt alls i gränser! Otaliga människor ställs varje dag inför nödvändigheten att korsa dessa gränser för att skydda sina familjer, hitta arbete, hitta mat och säkerhet, fly krig och folkmord, och kämpa för ett bättre liv.
+    
+    När klimatkatastrofen verkligen bryter ut kommer dessa människor bli allt fler oc fler, och som anarkister kommer vi vara där för att hjälpa dem i säkerhet. Det är därför vi kämpar för en värld utan gränser, och en värld där människor är fria att bo där de behöver. Anarkism är ingen ny ide --- dess moderna tolkning kan spåras till 1840 (\emph{Vad är egendom?} av Proudhon), och antagligen tidigare ändå! Och den utvecklas och växer i detta nu. Det finns hela samhällen uppbyggda efter anarkistiska ideer. Rojava revolutionen i Kurdistan i mellanöstern, Zapatistarörelsen i centralamerika är de största exemplen, men delar av Spanien under Spanska inbördeskriget var uttryckligen anarkistiska, liksom större delen av Paris under Pariskommunen 1871.
+    
+    \begin{boldquote}
+    	Vi har slutat vänta på att någon ny rik politiker ska ge oss frihet, vi har för mycket värdighet för att böna om små reformer.
+    \end{boldquote}
+    
+    \begin{boldishquote}
+    	För en värld utan gränser, härskare, förtryck och utnyttjande i alla former, måste vi kämpa för frihet och värdighet!
+    \end{boldishquote}
+    
+    \vfill
+    \subsection*{Läs mer}
+    \begin{description}\footnotsize
+    	\item[Anarchy] av Errico Malatesta\footnote{Neither Malatesta nor Goldman seem to have been translated to Swedish very often. Dunno if you'd like suggestions for primers that are easier to access in Swedish?}
+    	\item[Ekologi \& anarki] av Murray Bookchin
+    	\item[Anarchism. What it Realy Stands for] av Emma Goldman
+    \end{description}
+    \colorrule
+    \begin{center}\small
+    	Publicerad av Action Now!\\
+    	(Duplicering och spridning utan att be om tillstånd uppmuntras starkt!)
+    \end{center}
 \end{document}
